tree-sitter-org2/test/corpus/basic.txt
==================
Headlines
==================

* Hello world

---

(source_file
  (blank_line)
  (headline
    stars: (stars)
    title: (title))
  (blank_line))

==================
Multiple Headlines
==================

* One
* Two

---

(source_file
  (blank_line)
  (headline
    stars: (stars)
    title: (title))
  (blank_line)
  (headline
    stars: (stars)
    title: (title))
  (blank_line))

==================
Paragraph
==================

This is a paragraph.
Second line.

---

(source_file
  (blank_line)
  (paragraph
    line: (text))
  (blank_line)
  (paragraph
    line: (text))
  (blank_line))

==================
Extended structural lines
==================

#+begin_note warning
#+end_note
#+begin: clocktable
#+end:
\begin{equation}
\end{equation}
[fn:n] Note.
: fixed
%%(diary-anniversary 1 1 2000)
| A |
#+TBLFM: $1=$1+1
- [@3] [-] term :: value
#+TITLE: Example
# Comment

---

(source_file
  (blank_line)
  (block_marker)
  (blank_line)
  (block_marker)
  (blank_line)
  (dynamic_block_marker)
  (blank_line)
  (dynamic_block_marker)
  (blank_line)
  (latex_environment_marker)
  (blank_line)
  (latex_environment_marker)
  (blank_line)
  (footnote_definition)
  (blank_line)
  (fixed_width)
  (blank_line)
  (diary_sexp)
  (blank_line)
  (table_row)
  (blank_line)
  (table_formula)
  (blank_line)
  (list_item)
  (blank_line)
  (keyword_line)
  (blank_line)
  (comment_line)
  (blank_line))
